Bug 769115 - Calculate marker orientation correctly for arc endpoints. r=jwatt